--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "eject": "react-app-rewired eject"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "antd": "^5.9.4",
+    "axios": "^1.5.1",
     "customize-cra": "^1.0.0",
     "i18next": "^23.5.1",
     "i18next-browser-languagedetector": "^7.1.0",
